--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
+Python 3.9.0
 Django==3.1.5
 mysqlclient==2.0.3
 psycopg2==2.8.6
-psycopg2-binary==2.8.6
-pylint==2.6.0
-pylint-django==2.4.2
+Pillow==8.1.0
 
